src/main/java/com/example/keepstock/error/exception/ImageDownloadException.java
package com.example.keepstock.error.exception;

public class ImageDownloadException extends RuntimeException {
    public ImageDownloadException(String message) {
        super(message);
    }
}